outputs/tsp_constructive-constructive/2025-09-19_00-14-35/evaluations/problem_eval-4888163250827778460_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores, combining local distance, connectivity, and destination proximity with a novelty factor that rewards nodes connecting high-importance regions while penalizing bottlenecks, using a hybrid scoring mechanism that evolves exploration focus through progressive weighting of topological features.}
                                                                                                                                                                                                                                                                                                                         ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores, combining local distance, connectivity, and destination proximity with a novelty factor that rewards nodes connecting high-importance regions while penalizing bottlenecks, using a hybrid scoring mechanism that evolves exploration focus through progressive weighting of topological features.}
                                                                                                                                                                                                                                                                                                                         ^
SyntaxError: unmatched '}'
